--- a/package.json
+++ b/package.json
@@ -9,26 +9,37 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
+    "@tanstack/react-query": "^5.79.0",
+    "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "expo": "~53.0.9",
     "expo-status-bar": "~2.2.3",
-    "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-hook-form": "^7.56.4",
     "react-native": "0.79.2",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.27.1",
+    "@babel/plugin-transform-class-properties": "^7.27.1",
+    "@babel/plugin-transform-flow-strip-types": "^7.27.1",
+    "@babel/plugin-transform-private-methods": "^7.27.1",
+    "@babel/plugin-transform-private-property-in-object": "^7.27.1",
+    "@expo/vector-icons": "^14.1.0",
     "@types/react": "~19.0.10",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.4",
-    "tailwindcss": "^3.4.17",
+    "@types/react-native": "^0.73.0",
+    "expo-image": "^2.1.7",
+    "react-native-reanimated": "^3.17.5",
     "typescript": "~5.8.3"
   },
   "private": true
