--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
+    "@react-navigation/native-stack": "^7.3.14",
     "@tanstack/react-query": "^5.79.0",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
@@ -22,7 +23,7 @@
     "react-hook-form": "^7.56.4",
     "react-native": "0.79.2",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^10.2.0",
     "yup": "^1.6.1",
     "zustand": "^5.0.5"
