--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "proconnect",
-  "version": "1.0.0",
-  "main": "index.ts",
+  "name": "proconnect",  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -21,7 +20,7 @@
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-hook-form": "^7.56.4",
-    "react-native": "0.79.2",
+    "react-native": "^0.79.3",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^10.2.0",
@@ -40,7 +39,7 @@
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.73.0",
     "expo-image": "^2.1.7",
-    "react-native-reanimated": "^3.17.5",
+    "react-native-reanimated": "^3.17.4",
     "typescript": "~5.8.3"
   },
   "private": true
